# qt_practice

./: .gitignore
client-server-ssl/: CMakeLists.txt
client-server-ssl/client/: CMakeLists.txt  main.cpp
client-server-ssl/server/: CMakeLists.txt  main.cpp
qt_remote/: CMakeLists.txt
qt_remote/QtRemoteClient/: CMakeLists.txt  QtRemoteClient.cpp
qt_remote/QtRemoteClient/exe/: main.cpp
qt_remote/QtRemoteClient/include/: QtRemoteClient.hpp
qt_remote/QtRemoteServer/: CMakeLists.txt  QtRemoteServer.cpp  RndGenerator.cpp  RndGeneratorConfig.cpp
qt_remote/QtRemoteServer/exe/: main.cpp
qt_remote/QtRemoteServer/include/: QtRemoteServer.hpp  RndGenerator.hpp  RndGeneratorConfig.hpp
qt_remote/QtRemoteServer/test/: QtRemoteServer_test.cpp
qt_remote/QtRemoteSource/: CMakeLists.txt
qt_remote/QtRemoteSource/exe/: main.cpp
qt_remote/QtRemoteSource/test/: example_test.cpp
qt_remote2/: .gitignore  CMakeLists.txt
qt_remote2/QtRemoteClient/: CMakeLists.txt  QtRemoteClient.cpp
qt_remote2/QtRemoteClient/exe/: main.cpp
qt_remote2/QtRemoteClient/include/: QtRemoteClient.hpp
qt_remote2/QtRemoteServer/: CMakeLists.txt  QtRemoteServer.cpp
qt_remote2/QtRemoteServer/exe/: main.cpp
qt_remote2/QtRemoteServer/include/: Payload.hpp  QtRemoteServer.hpp  ServerInterface.hpp
template_project/: .clang-format  CMakeLists.txt
template_project/sub_project/: CMakeLists.txt  example.cpp
template_project/sub_project/exe/: main.cpp
template_project/sub_project/include/: internal.hpp
template_project/sub_project/test/: example_test.cpp
